[metadata]
name = deephaven-plugin-sinwave
description = Deephaven Plugin for demostrating Sin Waves
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.plugin.sinwave.__version__
url = https://github.com/mofojed/deephaven-plugin-sinwave
project_urls =
    Source Code = https://github.com/mofojed/deephaven-plugin-sinwave
    Bug Tracker = https://github.com/mofojed/deephaven-plugin-sinwave/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Framework :: Deephaven plugin
    Development Status :: 3 - Alpha
keywords = deephaven, plugin, sin
author = Mike Bender
author_email = mikebender@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.sinwave:SinWaveRegistration
